--- a/src/main/resources/views/7yMedia.fxml
+++ b/src/main/resources/views/7yMedia.fxml
@@ -4,39 +4,40 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="647.0" prefWidth="874.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Proyecto.controllers.Ymedia">
-   <children>
-      <TilePane fx:id="player" layoutX="460.0" layoutY="346.0">
-         <children>
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-         </children>
-      </TilePane>
-      <TilePane fx:id="rival" layoutX="28.0" layoutY="24.0" AnchorPane.leftAnchor="28.0" AnchorPane.topAnchor="24.0">
-         <children>
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" />
-         </children>
-      </TilePane>
-      <Label fx:id="rivalscore" layoutX="200.0" layoutY="338.0" text="Puntuación rival: 0" />
-      <Label fx:id="player" layoutX="646.0" layoutY="307.0" text="Puntuación Jugador: 0" />
-      <Button fx:id="add" layoutX="174.0" layoutY="420.0" mnemonicParsing="false" text="Pedir" />
-      <Button fx:id="stop" layoutX="237.0" layoutY="420.0" mnemonicParsing="false" text="Plantarse" />
-   </children>
+<AnchorPane prefHeight="647.0" prefWidth="874.0" xmlns="http://javafx.com/javafx/10.0.2-internal"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="Proyecto.controllers.Ymedia">
+    <children>
+        <TilePane fx:id="player" layoutX="460.0" layoutY="346.0">
+            <children>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+            </children>
+        </TilePane>
+        <TilePane fx:id="rival" layoutX="28.0" layoutY="24.0" AnchorPane.leftAnchor="28.0" AnchorPane.topAnchor="24.0">
+            <children>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+                <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true"/>
+            </children>
+        </TilePane>
+        <Label fx:id="rivalscore" layoutX="200.0" layoutY="338.0" text="Puntuación rival: 0"/>
+        <Label fx:id="player" layoutX="646.0" layoutY="307.0" text="Puntuación Jugador: 0"/>
+        <Button fx:id="add" layoutX="174.0" layoutY="420.0" mnemonicParsing="false" text="Pedir"/>
+        <Button fx:id="stop" layoutX="237.0" layoutY="420.0" mnemonicParsing="false" text="Plantarse"/>
+    </children>
 </AnchorPane>
